fix spacing for fields (#981)

--- a/src/components/field/_field.scss
+++ b/src/components/field/_field.scss
@@ -1,6 +1,5 @@
 .field {
   position: relative;
-  margin-bottom: 1rem;
 
   &__other {
     display: none;
@@ -11,12 +10,6 @@
     input:checked ~ & {
       display: block;
     }
-  }
-}
-
-.mutually-exclusive {
-  .field {
-    margin-bottom: 0rem;
   }
 }
 
